--- a/nodeauth/public/stylesheets/style.css
+++ b/nodeauth/public/stylesheets/style.css
@@ -2,3 +2,23 @@ label,input,button{
   margin-top:5px;
   margin-bottom:5px;
 }
+ul.succes li{
+  padding:15px;
+  margin-bottom: :20px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  color:#3c763d;
+  background-color: #dff0d8;
+  border-color:#d6e9c6;
+  list-style: none;
+}
+ul.error li{
+  list-style: none;
+  padding:15px;
+  margin-bottom: :20px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  color:#a94442;
+  background-color: #f2dede;
+  border-color:#ebccd1;
+}
