--- a/TekBooks/public/templates/layouts/manage.dust
+++ b/TekBooks/public/templates/layouts/manage.dust
@@ -32,9 +32,11 @@
 
         <div class="row">
           <div class="large-12 columns">
+            {messages|s}
             {+body /}
           </div>
         </div>
+
 
         <footer>
           <div class="row">
