--- a/portfolio/views/layouts/main.handlebars
+++ b/portfolio/views/layouts/main.handlebars
@@ -12,8 +12,8 @@
         <div class="off-canvas position-left reveal-for-large" id="my-info" data-off-canvas data-position="left">
           <div class="row column">
             <br>
-            <img class="thumbnail" src="http://placehold.it/550x350">
-            <h5>Mike Mikerson</h5>
+            <img class="thumbnail" src="/images/avatar.jpg">
+            <h5>Adita</h5>
             <p>Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo.</p>
           </div>
         </div>
@@ -39,6 +39,7 @@
         </div>
       </div>
     </div>
-
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
